// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<IconLike /> DOM element add "id" attribute to DOM element 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c"
    height="1em"
    id="hasId"
    viewBox="0 0 256 256"
    width="1em"
  >
      
    <path
      d="M85 177H46V84h39v93zm116.2-92h-34.7c0-.1.1-.1.1-.2 7.9-15.2 9.7-22.7 9.4-35.3-.3-12.3-11.8-23-20.6-23.1-7.3 0-10.7 7.3-12.2 11.3-4.8 12.3-7.8 23.6-24.7 46.1-.5.7-1.3 1.1-2.1 1.1h-.1c-9.5 0-17.2 7.7-17.2 17.2v58.6c0 9.5 7.7 17.2 17.2 17.2h61c8.1 0 10.6-5.4 14.6-14.6 0 0 21.3-45.8 24.3-62.6 1.4-7.9-7-15.7-15-15.7z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconLike /> DOM element add "id" attribute to DOM element 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:inherit}.htz-c{fill:#FFF}"`;

exports[`<IconLike /> DOM element add "onClick" attribute to DOM element 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c"
    height="1em"
    id={[Function]}
    viewBox="0 0 256 256"
    width="1em"
  >
      
    <path
      d="M85 177H46V84h39v93zm116.2-92h-34.7c0-.1.1-.1.1-.2 7.9-15.2 9.7-22.7 9.4-35.3-.3-12.3-11.8-23-20.6-23.1-7.3 0-10.7 7.3-12.2 11.3-4.8 12.3-7.8 23.6-24.7 46.1-.5.7-1.3 1.1-2.1 1.1h-.1c-9.5 0-17.2 7.7-17.2 17.2v58.6c0 9.5 7.7 17.2 17.2 17.2h61c8.1 0 10.6-5.4 14.6-14.6 0 0 21.3-45.8 24.3-62.6 1.4-7.9-7-15.7-15-15.7z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconLike /> DOM element add "onClick" attribute to DOM element 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:inherit}.htz-c{fill:#FFF}"`;

exports[`<IconLike /> DOM element pass attributes defined in the "attrs" prop to the DOM element 1`] = `
<div>
  <svg
    aria-hidden={true}
    className="htz-a htz-b htz-c"
    height="1em"
    viewBox="0 0 256 256"
    width="1em"
  >
      
    <path
      d="M85 177H46V84h39v93zm116.2-92h-34.7c0-.1.1-.1.1-.2 7.9-15.2 9.7-22.7 9.4-35.3-.3-12.3-11.8-23-20.6-23.1-7.3 0-10.7 7.3-12.2 11.3-4.8 12.3-7.8 23.6-24.7 46.1-.5.7-1.3 1.1-2.1 1.1h-.1c-9.5 0-17.2 7.7-17.2 17.2v58.6c0 9.5 7.7 17.2 17.2 17.2h61c8.1 0 10.6-5.4 14.6-14.6 0 0 21.3-45.8 24.3-62.6 1.4-7.9-7-15.7-15-15.7z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconLike /> DOM element pass attributes defined in the "attrs" prop to the DOM element 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:inherit}.htz-c{fill:#FFF}"`;

exports[`<IconLike /> DOM element render correctly when no props are passed 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c"
    height="1em"
    viewBox="0 0 256 256"
    width="1em"
  >
      
    <path
      d="M85 177H46V84h39v93zm116.2-92h-34.7c0-.1.1-.1.1-.2 7.9-15.2 9.7-22.7 9.4-35.3-.3-12.3-11.8-23-20.6-23.1-7.3 0-10.7 7.3-12.2 11.3-4.8 12.3-7.8 23.6-24.7 46.1-.5.7-1.3 1.1-2.1 1.1h-.1c-9.5 0-17.2 7.7-17.2 17.2v58.6c0 9.5 7.7 17.2 17.2 17.2h61c8.1 0 10.6-5.4 14.6-14.6 0 0 21.3-45.8 24.3-62.6 1.4-7.9-7-15.7-15-15.7z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconLike /> DOM element render correctly when no props are passed 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:inherit}.htz-c{fill:#FFF}"`;

exports[`<IconLike /> styles responsively set misc styles on an icon 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c htz-d htz-e"
    height="1em"
    viewBox="0 0 256 256"
    width="1em"
  >
      
    <path
      d="M85 177H46V84h39v93zm116.2-92h-34.7c0-.1.1-.1.1-.2 7.9-15.2 9.7-22.7 9.4-35.3-.3-12.3-11.8-23-20.6-23.1-7.3 0-10.7 7.3-12.2 11.3-4.8 12.3-7.8 23.6-24.7 46.1-.5.7-1.3 1.1-2.1 1.1h-.1c-9.5 0-17.2 7.7-17.2 17.2v58.6c0 9.5 7.7 17.2 17.2 17.2h61c8.1 0 10.6-5.4 14.6-14.6 0 0 21.3-45.8 24.3-62.6 1.4-7.9-7-15.7-15-15.7z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconLike /> styles responsively set misc styles on an icon 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:inherit}.htz-c{fill:#FFF}@media (max-width: 79.9375em){.htz-d{position:relative}}@media (min-width: 80em){.htz-e{position:static}}"`;

exports[`<IconLike /> styles set icon's color 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c"
    height="1em"
    viewBox="0 0 256 256"
    width="1em"
  >
      
    <path
      d="M85 177H46V84h39v93zm116.2-92h-34.7c0-.1.1-.1.1-.2 7.9-15.2 9.7-22.7 9.4-35.3-.3-12.3-11.8-23-20.6-23.1-7.3 0-10.7 7.3-12.2 11.3-4.8 12.3-7.8 23.6-24.7 46.1-.5.7-1.3 1.1-2.1 1.1h-.1c-9.5 0-17.2 7.7-17.2 17.2v58.6c0 9.5 7.7 17.2 17.2 17.2h61c8.1 0 10.6-5.4 14.6-14.6 0 0 21.3-45.8 24.3-62.6 1.4-7.9-7-15.7-15-15.7z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconLike /> styles set icon's color 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:#0B7EB5}.htz-c{fill:#FFF}"`;

exports[`<IconLike /> styles set icon's color responsively 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c htz-d"
    height="1em"
    viewBox="0 0 256 256"
    width="1em"
  >
      
    <path
      d="M85 177H46V84h39v93zm116.2-92h-34.7c0-.1.1-.1.1-.2 7.9-15.2 9.7-22.7 9.4-35.3-.3-12.3-11.8-23-20.6-23.1-7.3 0-10.7 7.3-12.2 11.3-4.8 12.3-7.8 23.6-24.7 46.1-.5.7-1.3 1.1-2.1 1.1h-.1c-9.5 0-17.2 7.7-17.2 17.2v58.6c0 9.5 7.7 17.2 17.2 17.2h61c8.1 0 10.6-5.4 14.6-14.6 0 0 21.3-45.8 24.3-62.6 1.4-7.9-7-15.7-15-15.7z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconLike /> styles set icon's color responsively 2`] = `".htz-a{vertical-align:-0.15em}.htz-d{fill:#FFF}@media (max-width: 79.9375em){.htz-b{color:#0B7EB5}}@media (min-width: 80em){.htz-c{color:#2D2D2D}}"`;

exports[`<IconLike /> styles set icon's fill 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c"
    height="1em"
    viewBox="0 0 256 256"
    width="1em"
  >
      
    <path
      d="M85 177H46V84h39v93zm116.2-92h-34.7c0-.1.1-.1.1-.2 7.9-15.2 9.7-22.7 9.4-35.3-.3-12.3-11.8-23-20.6-23.1-7.3 0-10.7 7.3-12.2 11.3-4.8 12.3-7.8 23.6-24.7 46.1-.5.7-1.3 1.1-2.1 1.1h-.1c-9.5 0-17.2 7.7-17.2 17.2v58.6c0 9.5 7.7 17.2 17.2 17.2h61c8.1 0 10.6-5.4 14.6-14.6 0 0 21.3-45.8 24.3-62.6 1.4-7.9-7-15.7-15-15.7z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconLike /> styles set icon's fill 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:inherit}.htz-c{fill:#0B7EB5}"`;

exports[`<IconLike /> styles set icon's fill responsively 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c htz-d"
    height="1em"
    viewBox="0 0 256 256"
    width="1em"
  >
      
    <path
      d="M85 177H46V84h39v93zm116.2-92h-34.7c0-.1.1-.1.1-.2 7.9-15.2 9.7-22.7 9.4-35.3-.3-12.3-11.8-23-20.6-23.1-7.3 0-10.7 7.3-12.2 11.3-4.8 12.3-7.8 23.6-24.7 46.1-.5.7-1.3 1.1-2.1 1.1h-.1c-9.5 0-17.2 7.7-17.2 17.2v58.6c0 9.5 7.7 17.2 17.2 17.2h61c8.1 0 10.6-5.4 14.6-14.6 0 0 21.3-45.8 24.3-62.6 1.4-7.9-7-15.7-15-15.7z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconLike /> styles set icon's fill responsively 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:inherit}@media (max-width: 79.9375em){.htz-c{fill:#0B7EB5}}@media (min-width: 80em){.htz-d{fill:#2D2D2D}}"`;

exports[`<IconLike /> styles set icon's size 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c htz-d"
    height="1em"
    viewBox="0 0 256 256"
    width="1em"
  >
      
    <path
      d="M85 177H46V84h39v93zm116.2-92h-34.7c0-.1.1-.1.1-.2 7.9-15.2 9.7-22.7 9.4-35.3-.3-12.3-11.8-23-20.6-23.1-7.3 0-10.7 7.3-12.2 11.3-4.8 12.3-7.8 23.6-24.7 46.1-.5.7-1.3 1.1-2.1 1.1h-.1c-9.5 0-17.2 7.7-17.2 17.2v58.6c0 9.5 7.7 17.2 17.2 17.2h61c8.1 0 10.6-5.4 14.6-14.6 0 0 21.3-45.8 24.3-62.6 1.4-7.9-7-15.7-15-15.7z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconLike /> styles set icon's size 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:inherit}.htz-c{fill:#FFF}.htz-d{font-size:6rem}"`;

exports[`<IconLike /> styles set icon's size responsively 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c htz-d htz-e"
    height="1em"
    viewBox="0 0 256 256"
    width="1em"
  >
      
    <path
      d="M85 177H46V84h39v93zm116.2-92h-34.7c0-.1.1-.1.1-.2 7.9-15.2 9.7-22.7 9.4-35.3-.3-12.3-11.8-23-20.6-23.1-7.3 0-10.7 7.3-12.2 11.3-4.8 12.3-7.8 23.6-24.7 46.1-.5.7-1.3 1.1-2.1 1.1h-.1c-9.5 0-17.2 7.7-17.2 17.2v58.6c0 9.5 7.7 17.2 17.2 17.2h61c8.1 0 10.6-5.4 14.6-14.6 0 0 21.3-45.8 24.3-62.6 1.4-7.9-7-15.7-15-15.7z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconLike /> styles set icon's size responsively 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:inherit}.htz-c{fill:#FFF}@media (max-width: 79.9375em){.htz-d{font-size:6rem}}@media (min-width: 80em){.htz-e{font-size:7rem}}"`;

exports[`<IconLike /> styles set misc styles on an icon 1`] = `
<div>
  <svg
    className="htz-a htz-b htz-c htz-d"
    height="1em"
    viewBox="0 0 256 256"
    width="1em"
  >
      
    <path
      d="M85 177H46V84h39v93zm116.2-92h-34.7c0-.1.1-.1.1-.2 7.9-15.2 9.7-22.7 9.4-35.3-.3-12.3-11.8-23-20.6-23.1-7.3 0-10.7 7.3-12.2 11.3-4.8 12.3-7.8 23.6-24.7 46.1-.5.7-1.3 1.1-2.1 1.1h-.1c-9.5 0-17.2 7.7-17.2 17.2v58.6c0 9.5 7.7 17.2 17.2 17.2h61c8.1 0 10.6-5.4 14.6-14.6 0 0 21.3-45.8 24.3-62.6 1.4-7.9-7-15.7-15-15.7z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`<IconLike /> styles set misc styles on an icon 2`] = `".htz-a{vertical-align:-0.15em}.htz-b{color:inherit}.htz-c{fill:#FFF}.htz-d{position:relative}"`;
